--- a/proj.ipynb
+++ b/proj.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "<font size=\"5\"> Analyzing The TMDB-Movies DataSet</font>"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 234,
    "source": [
     "import random as rand\n",
     "import pandas as pd\n",
@@ -10,115 +17,11 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "df = pd.read_csv('tmdb-movies.csv')\n",
+    "df = pd.read_csv('tmdb.csv')\n",
     "df.drop_duplicates(inplace=True)\n",
     "df.head(1);"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>imdb_id</th>\n",
-       "      <th>popularity</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>original_title</th>\n",
-       "      <th>cast</th>\n",
-       "      <th>homepage</th>\n",
-       "      <th>director</th>\n",
-       "      <th>tagline</th>\n",
-       "      <th>...</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>production_companies</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>vote_count</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>release_year</th>\n",
-       "      <th>budget_adj</th>\n",
-       "      <th>revenue_adj</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>135397</td>\n",
-       "      <td>tt0369610</td>\n",
-       "      <td>32.985763</td>\n",
-       "      <td>150000000</td>\n",
-       "      <td>1513528810</td>\n",
-       "      <td>Jurassic World</td>\n",
-       "      <td>Chris Pratt|Bryce Dallas Howard|Irrfan Khan|Vi...</td>\n",
-       "      <td>http://www.jurassicworld.com/</td>\n",
-       "      <td>Colin Trevorrow</td>\n",
-       "      <td>The park is open.</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Twenty-two years after the events of Jurassic ...</td>\n",
-       "      <td>124</td>\n",
-       "      <td>Action|Adventure|Science Fiction|Thriller</td>\n",
-       "      <td>Universal Studios|Amblin Entertainment|Legenda...</td>\n",
-       "      <td>6/9/15</td>\n",
-       "      <td>5562</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1.379999e+08</td>\n",
-       "      <td>1.392446e+09</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id    imdb_id  popularity     budget     revenue  original_title  \\\n",
-       "0  135397  tt0369610   32.985763  150000000  1513528810  Jurassic World   \n",
-       "\n",
-       "                                                cast  \\\n",
-       "0  Chris Pratt|Bryce Dallas Howard|Irrfan Khan|Vi...   \n",
-       "\n",
-       "                        homepage         director            tagline  ...  \\\n",
-       "0  http://www.jurassicworld.com/  Colin Trevorrow  The park is open.  ...   \n",
-       "\n",
-       "                                            overview runtime  \\\n",
-       "0  Twenty-two years after the events of Jurassic ...     124   \n",
-       "\n",
-       "                                      genres  \\\n",
-       "0  Action|Adventure|Science Fiction|Thriller   \n",
-       "\n",
-       "                                production_companies release_date vote_count  \\\n",
-       "0  Universal Studios|Amblin Entertainment|Legenda...       6/9/15       5562   \n",
-       "\n",
-       "   vote_average  release_year    budget_adj   revenue_adj  \n",
-       "0           6.5          2015  1.379999e+08  1.392446e+09  \n",
-       "\n",
-       "[1 rows x 21 columns]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 1
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -537,6 +440,26 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 235,
+   "source": [
+    "mostpop.value_counts().count()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 235
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "<font size=\"4\"> Hence Choosing the Genre Has an big influence in the potential movie popularity</font>"
@@ -768,6 +691,28 @@
      "metadata": {
       "needs_background": "light"
      }
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "source": [
+    "print(df.columns) "
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Index(['id', 'imdb_id', 'popularity', 'budget', 'revenue', 'original_title',\n",
+      "       'cast', 'homepage', 'director', 'tagline', 'keywords', 'overview',\n",
+      "       'runtime', 'genres', 'production_companies', 'release_date',\n",
+      "       'vote_count', 'vote_average', 'release_year', 'budget_adj',\n",
+      "       'revenue_adj'],\n",
+      "      dtype='object')\n"
+     ]
     }
    ],
    "metadata": {}
